--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.8.9",
     "react-svg": "^16.1.5"
